--- a/parts/header.html
+++ b/parts/header.html
@@ -1,30 +1,26 @@
-<!-- wp:group {"layout":{"inherit":"true"}} -->
+<!-- wp:group {"layout":{"inherit":"true","type":"constrained"}} -->
 <div class="wp-block-group">
-	<!-- wp:group {"align":"full","layout":{"type":"flex","justifyContent":"space-between"},"style":{"spacing":{"padding":{"bottom":"30px","top":"30px"}}}} -->
-	<div class="wp-block-group alignfull" style="padding-bottom:30px;padding-top:30px">
-	
-		<!-- wp:group {"layout":{"type":"flex"}} -->
-		<div class="wp-block-group">
-			<!-- wp:site-logo {"width":64} /-->
-	
-			<!-- wp:group -->
-			<div class="wp-block-group">
-				<!-- wp:site-title /-->
-				<!-- wp:site-tagline /-->
-			</div>
-			<!-- /wp:group -->
-		</div>
-		<!-- /wp:group -->
-	
-		<!-- wp:navigation {"layout":{"type":"flex","setCascadingProperties":true,"justifyContent":"right","orientation":"horizontal"},"style":{"spacing":{"margin":{"top":"0"}}}} /-->
-	
-	</div>
-	<!-- /wp:group -->
+    <!-- wp:group {"align":"full","style":{"spacing":{"padding":{"bottom":"30px","top":"30px"}}},"layout":{"type":"flex","justifyContent":"space-between"}} -->
+    <div class="wp-block-group alignfull" style="padding-top:30px;padding-bottom:30px">
+        <!-- wp:group {"layout":{"type":"flex"}} -->
+        <div class="wp-block-group">
+            <!-- wp:site-logo {"width":64} /-->
 
-</div>
+            <!-- wp:group -->
+            <div class="wp-block-group">
+
+                <!-- wp:site-tagline /-->
+
+                <!-- wp:site-title /--></div>
+            <!-- /wp:group --></div>
+        <!-- /wp:group -->
+
+        <!-- wp:navigation {"layout":{"type":"flex","setCascadingProperties":true,"justifyContent":"right","orientation":"horizontal"},"style":{"spacing":{"margin":{"top":"0"}}}} -->
+        <!-- wp:page-list /-->
+        <!-- /wp:navigation --></div>
+    <!-- /wp:group --></div>
 <!-- /wp:group -->
 
-<!-- wp:spacer {"height":50} -->
+<!-- wp:spacer {"height":"50px"} -->
 <div style="height:50px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
- 
