Adding custom block theme styles

--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,11 +1,7 @@
 <!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:separator {"align":"wide","style":{"spacing":{"margin":{"top":"var:preset|spacing|30","bottom":"var:preset|spacing|30"}}},"backgroundColor":"custom-sendig-black","className":"is-style-default"} -->
-<hr class="wp-block-separator alignwide has-text-color has-custom-sendig-black-color has-alpha-channel-opacity has-custom-sendig-black-background-color has-background is-style-default" style="margin-top:var(--wp--preset--spacing--30);margin-bottom:var(--wp--preset--spacing--30)"/>
+<div class="wp-block-group"><!-- wp:separator {"align":"full","className":"is-style-sendig-separator"} -->
+<hr class="wp-block-separator alignfull has-alpha-channel-opacity is-style-sendig-separator"/>
 <!-- /wp:separator -->
-
-<!-- wp:paragraph -->
-<p></p>
-<!-- /wp:paragraph -->
 
 <!-- wp:group {"style":{"spacing":{"padding":{"top":"80px","bottom":"30px"}}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between","verticalAlignment":"top"}} -->
 <div class="wp-block-group" style="padding-top:80px;padding-bottom:30px"><!-- wp:group {"layout":{"type":"flex","orientation":"vertical"}} -->
