Attempting to get the footer HR working

--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,6 +1,7 @@
-<!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:separator {"align":"full","className":"is-style-sendig-separator"} -->
-<hr class="wp-block-separator alignfull has-alpha-channel-opacity is-style-sendig-separator"/>
+<!-- wp:group {"layout":{"type":"constrained"}} -->
+<div class="wp-block-group"><!-- wp:group {"align":"wide","layout":{"type":"constrained"}} -->
+<div class="wp-block-group alignwide"><!-- wp:separator {"align":"wide","className":"is-style-sendig-separator"} -->
+<hr class="wp-block-separator alignwide has-alpha-channel-opacity is-style-sendig-separator"/>
 <!-- /wp:separator -->
 
 <!-- wp:group {"style":{"spacing":{"padding":{"top":"80px","bottom":"30px"}}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between","verticalAlignment":"top"}} -->
@@ -21,5 +22,6 @@
 <!-- wp:paragraph {"align":"center","style":{"typography":{"fontStyle":"normal","fontWeight":"500","lineHeight":"5"}},"fontSize":"small"} -->
 <p class="has-text-align-center has-small-font-size" style="font-style:normal;font-weight:500;line-height:5">Proudly Powered by <a href="https://wordpress.org" rel="nofollow">WordPress</a></p>
 <!-- /wp:paragraph --></div>
+<!-- /wp:group --></div>
 <!-- /wp:group --></div>
 <!-- /wp:group -->
