Wrapping up the Sendig sidebar

--- a/parts/footer.html
+++ b/parts/footer.html
@@ -4,8 +4,8 @@
 <hr class="wp-block-separator alignwide has-alpha-channel-opacity is-style-sendig-separator"/>
 <!-- /wp:separator -->
 
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"80px","bottom":"30px"}}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between","verticalAlignment":"top"}} -->
-<div class="wp-block-group" style="padding-top:80px;padding-bottom:30px"><!-- wp:group {"layout":{"type":"flex","orientation":"vertical"}} -->
+<!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"top":"80px","bottom":"30px"}}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between","verticalAlignment":"top"}} -->
+<div class="wp-block-group alignwide" style="padding-top:80px;padding-bottom:30px"><!-- wp:group {"layout":{"type":"flex","orientation":"vertical"}} -->
 <div class="wp-block-group"><!-- wp:site-title {"level":0,"style":{"typography":{"textTransform":"uppercase","fontStyle":"normal","fontWeight":"700"}},"fontSize":"x-large"} /-->
 
 <!-- wp:social-links {"iconColor":"custom-sendig-black","iconColorValue":"#302e26","className":"is-style-logos-only"} -->
