--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,7 +1,7 @@
 <!-- wp:group {"layout":{"type":"constrained"}} -->
 <div class="wp-block-group"><!-- wp:group {"align":"wide","layout":{"type":"constrained"}} -->
-<div class="wp-block-group alignwide"><!-- wp:separator {"align":"wide","className":"is-style-sendig-separator"} -->
-<hr class="wp-block-separator alignwide has-alpha-channel-opacity is-style-sendig-separator has-flip-direction-right"/>
+<div class="wp-block-group alignwide"><!-- wp:separator {"align":"wide","className":"is-style-sendig-separator","hasFlipDirection":"right","leftIsPressed":false,"rightIsPressed":true} -->
+<hr class="wp-block-separator alignwide has-alpha-channel-opacity is-style-sendig-separator right"/>
 <!-- /wp:separator -->
 
 <!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"top":"80px","bottom":"30px"}}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between","verticalAlignment":"top"}} -->
